src/test/ui/type-inference/unbounded-type-param-in-fn-with-assoc-type.stderr
error[E0282]: type annotations needed
  --> $DIR/unbounded-type-param-in-fn-with-assoc-type.rs:8:5
   |
LL |     foo();
   |     ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |
help: consider specifying the type arguments in the function call
   |
LL |     foo::<T, U>();
   |        ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
